<resources>
    <string name="app_name">R2K_MultiChannel_V1.00</string>
    <string name="btn_return">Back</string>
    <string name="btn_connect_device">Connect</string>
    <string name="btn_entry_page">Entry page</string>
    <string name="btn_get_verstion">Get version</string>
    <string name="tv_version_info">Version No.</string>
    <string name="btn_params_set_version_read">Read</string>
    <string name="tv_connect_device">Connect device</string>
    <string name="tv_info_hint">Information hint</string>
    <string name="tv_serialPort">SerialPort</string>
    <string name="tv_port">Port</string>
    <string name="tv_baudRate">Baud rate</string>
    <string name="msg_get_serialPort_succeed">Get serialPort succeed</string>
    <string name="msg_get_serialPort_failure">The serial port is not found.</string>
    <string name="msg_connect_succeed">Connect succeed</string>
    <string name="msg_connect_failure">Connect failure</string>
    <string name="msg_disconnect_connect">Disconnect connect</string>
    <string name="msg_get_version_failure">Acquisition failed, please check if the connection is normal</string>
    <string name="msg_please_connect_the_device">Please connect the device</string>
    <string name="tab_menu_basic_opera">Basic operation</string>
    <string name="tab_menu_tag_opera">Tags operate</string>
    <string name="tab_menu_params_setting">Parameter setting</string>
    <string name="tab_menu_other_setting">Other setting</string>
    <string name="tv_tag_count">Tag count&#160;&#160;:&#160;&#160;</string>
    <string name="tv_read_count">Read count&#160;&#160;:&#160;&#160;</string>
    <string name="tv_id">ID</string>
    <string name="tv_epc">EPC</string>
    <string name="tv_rssi">Rssi</string>
    <string name="tv_antenna">Ant</string>
    <string name="tv_device_no">Dev</string>
    <string name="tv_direction">Dir</string>
    <string name="tv_count">Count</string>
    <string name="btn_basic_inv_once">Inv once</string>
    <string name="btn_inventory">Start</string>
    <string name="btn_stop_inventory">Stop</string>
    <string name="btn_old_basic_inv_once">(old)Inv once</string>
    <string name="btn_old_inventory">(old)Start</string>
    <string name="btn_old_stop_inventory">(old)Stop</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_program_exits">Are you sure you want to exit the program?Exit  Cancel </string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="msg_stop_read_tag_succeed">Stop read tag succeed</string>
    <string name="msg_stop_read_tag_failure">Stop read tag succeed</string>
    <string name="tv_old_version_protocol">Old version protocol</string>
    <string name="tv_designated_area_read_write">Read/Write specific zone</string>
    <string name="tv_tag_lock_unlock">Tag lock unlock</string>
    <string name="tv_tag_destroy">Tag destroy</string>
    <string name="tv_designated_area">Bank</string>
    <string name="tv_read_write_start_address">Starting address</string>
    <string name="tv_read_write_length">Length</string>
    <string name="tv_read_write_data">Data</string>
    <string name="tv_read_write_visit_password">Access password</string>
    <string name="btn_read_write_continue_read">Continue read</string>
    <string name="btn_read_write_stop">Stop</string>
    <string name="btn_read_write_read_tag">Read tag</string>
    <string name="btn_read_write_write_tag">Write tag</string>
    <string name="btn_read_write_clear">Clear</string>
    <string name="msg_pwd_must_eight">Password must be 8 bits</string>
    <string name="msg_pwd_Invalid_char">Contains illegal characters(0 en dash 9,A en dash F)</string>
    <string name="msg_read_data_success">Read data success</string>
    <string name="msg_read_data_failure">Failure to read data</string>
    <string name="msg_length_diff">The data\'s length is differend from length specifications</string>
    <string name="msg_write_to_failure">Write failed</string>
    <string name="msg_write_to_successful">Write to successful</string>
    <string name="msg_action_failure">The operation failure</string>
    <string name="msg_action_successful">Operation is successful</string>
    <string name="tv_unlock_area">Operating zone</string>
    <string name="tv_unlock_type">Operating type</string>
    <string name="btn_unlock_perform">Execute</string>
    <string name="tv_access_password">Access Password</string>
    <string name="et_access_password_value">00 00 00 00</string>
    <string name="btn_destroy_tag">Destroy Tag</string>
    <string name="tv_destroy_password">Destroy Password</string>
    <string name="et_destroy_password_value">00 00 00 00</string>
    <string name="msg_default_destroy_password_no_operation">The default password cannot be executed, please modify it before operation!</string>
    <string name="msg_destroy_tag_succeed">Succeed to destroy tag</string>
    <string name="msg_destroy_tag_failed">Failed to destroy tag</string>
    <string-array name="spinner_tag_lock_operation_type">
        <item>Unlock</item>
        <item>Permanence Writable</item>
        <item>Security Lock</item>
        <item>Permanence Unwritable</item>
    </string-array>
    <string-array name="spinner_work_pattern">
        <item>Active mode</item>
        <item>Timing mode</item>
        <item>Trigger mode</item>
    </string-array>
    <string name="tv_params_set_work_mode">Work Mode</string>
    <string name="tv_params_set_communication_mode">Communication mode</string>
    <string name="tv_params_set_antenna_set_4channel">Antenna set 4channel</string>
    <string name="tv_params_set_antenna_set_16channel">Antenna set 16channel</string>
    <string name="tv_params_set_antenna_set_32channel">Antenna set 32channel</string>
    <string name="msg_params_set_detection_antenna_please_wait">Please wait......</string>
    <string name="msg_params_set_detection_antenna_fails">Detection antenna fails</string>
    <string name="msg_params_set_detection_antenna_successful">Detection antenna successful</string>
    <string name="tv_params_set_operating_frequency">Operating frequency</string>
    <string name="tv_params_set_frequency_set">Frequency Set</string>
    <string name="tv_params_set_frequency_fixed_frequency">Fixed frequency</string>
    <string name="tv_params_set_frequency_area">Frequency area</string>
    <string name="btn_params_set_frequency_set">Set</string>
    <string name="btn_params_set_frequency_read">Read</string>
    <string name="msg_params_set_input_frequency_error">Input constant frequency point error</string>
    <string name="msg_params_set_set_fixed_frequency_succeed">Set the fixed frequency succeed</string>
    <string name="msg_params_set_set_fixed_frequency_failed">Set the fixed frequency Failed </string>
    <string name="msg_params_set_set_hopping_frequency_succeed">Set the hopping frequency succeed</string>
    <string name="msg_params_set_set_hopping_frequency_failed">Set the hopping frequency Failed </string>
    <string name="msg_params_set_read_fixed_frequency_succeed">Read the fixed frequency succeed</string>
    <string name="msg_params_set_read_hopping_frequency_succeed">Read the hopping frequency succeed</string>
    <string name="msg_params_set_read_frequency_failed">Read the frequency Failed</string>
    <string name="msg_params_set_read_frequency_succeed">Read the frequency Succeed</string>
    <string name="msg_params_set_set_frequency_failed">Set the frequency Failed</string>
    <string name="msg_params_set_set_frequency_succeed">Set the frequency succeed</string>
    <string-array name="spinner_fixed_frequency">
        <item>1-902.5Mhz</item>
        <item>2-903.0Mhz</item>
        <item>3-903.5Mhz</item>
        <item>4-904.0Mhz</item>
        <item>5-904.5Mhz</item>
        <item>6-905.0Mhz</item>
        <item>7-905.5Mhz</item>
        <item>8-906.0Mhz</item>
        <item>9-906.5Mhz</item>
        <item>10-907.0Mhz</item>
        <item>11-907.5Mhz</item>
        <item>12-908.0Mhz</item>
        <item>13-908.5Mhz</item>
        <item>14-909.0Mhz</item>
        <item>15-909.5Mhz</item>
        <item>16-910.0Mhz</item>
        <item>17-910.5Mhz</item>
        <item>18-911.0Mhz</item>
        <item>19-911.5Mhz</item>
        <item>20-912.0Mhz</item>
        <item>21-912.5Mhz</item>
        <item>22-913.0Mhz</item>
        <item>23-913.5Mhz</item>
        <item>24-914.0Mhz</item>
        <item>25-914.5Mhz</item>
        <item>26-915.0Mhz</item>
        <item>27-915.5Mhz</item>
        <item>28-916.0Mhz</item>
        <item>29-916.5Mhz</item>
        <item>30-917.0Mhz</item>
        <item>31-917.5Mhz</item>
        <item>32-918.0Mhz</item>
        <item>33-918.5Mhz</item>
        <item>34-919.0Mhz</item>
        <item>35-919.5Mhz</item>
        <item>36-920.0Mhz</item>
        <item>37-920.5Mhz</item>
        <item>38-921.0Mhz</item>
        <item>39-921.5Mhz</item>
        <item>40-922.0Mhz</item>
        <item>41-922.5Mhz</item>
        <item>42-923.0Mhz</item>
        <item>43-923.5Mhz</item>
        <item>44-924.0Mhz</item>
        <item>45-924.5Mhz</item>
        <item>46-925.0Mhz</item>
        <item>47-925.5Mhz</item>
        <item>48-926.0Mhz</item>
        <item>49-926.5Mhz</item>
        <item>50-927.0Mhz</item>
    </string-array>
    <string-array name="spinner_operationg_frequency">
        <item>American-Standard (902.00 en dash 928.00)</item>
        <item>Chinese standard1(920.50 en dash 924.50)</item>
        <item>Chinese standard 2(840.50 en dash 844.50)</item>
        <item>European standard(866.00 en dash 867.50)</item>
        <item>Custom frequency points(Frequency hopping)</item>
        <item>Custom frequency points(Fixed frequency)</item>
    </string-array>
    <string name="tv_params_set_device_no">Device number</string>
    <string name="btn_params_set_work_mode_read">Read</string>
    <string name="btn_params_set_work_mode_set">Set</string>
    <string name="tv_params_set_get_version">Get version info</string>
    <string name="msg_params_set_get_version_succeed">Get Version success</string>
    <string name="msg_params_set_get_version_failed">Get Version failed</string>
    <string name="msg_work_mode_read_failed">Read failure operating mode</string>
    <string name="msg_work_mode_read_succeed">Read succeed operating mode</string>
    <string name="msg_work_mode_set_failed">Work mode setting failure</string>
    <string name="msg_work_mode_set_succeed">Work mode setting succeed</string>
    <string name="tv_output_port_setting">Output port setting</string>
    <string name="btn_output_port_setting_read">Read</string>
    <string name="btn_output_port_setting_set">Set</string>
    <string name="msg_output_port_setting_set_succeed">Set the output mode of success</string>
    <string name="msg_output_port_setting_set_failed">Set the output mode failure</string>
    <string name="msg_output_port_setting_read_failed">Read the output mode of failure</string>
    <string name="msg_output_port_setting_read_succeed">Read the output mode of succeed</string>
    <string-array name="spinner_communication_mode_r2k">
        <item>SerialPort</item>
        <item>TCP/IP</item>
        <item>RS485</item>
        <item>WIFI</item>
    </string-array>
    <string name="tv_antenna_params">Antenna Params</string>
    <string name="tv_antenna_params_work_time">Work Time(ms)</string>
    <string name="tv_antenna_params_power">Power(dbm)</string>
    <string name="btn_antenna_params_read">Read</string>
    <string name="btn_antenna_params_set">Set</string>
    <string name="tv_other_set_buzzer">Buzzer</string>
    <string name="btn_other_set_buzzer_read">Read</string>
    <string name="btn_other_set_buzzer_set">Set</string>
    <string name="rb_other_set_buzzer_on">On</string>
    <string name="rb_other_set_buzzer_off">Off</string>
</resources>