<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="top" >

    <LinearLayout
        android:id="@+id/lineLay_basic_btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/btn_old_basic_inv_once"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_old_basic_inv_once" />

         <Button
            android:id="@+id/btn_old_basic_beginInv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_old_inventory" />
         
        <Button
            android:id="@+id/btn_old_basic_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_old_stop_inventory" />

    </LinearLayout>

</RelativeLayout>