<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="top"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/shake_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_lock_unlock"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="shake_activity_back"
            android:text="@string/btn_return"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_lock_unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_tag_lock_unlock"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:src="@drawable/mm_title_btn_menu" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_read_pattern"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/linearlayout_underline"
        android:layout_below="@+id/shake_title_bar" >

        <TextView
            android:id="@+id/tv_read_pattern"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_unlock_area"
            android:textColor="@color/bg_black" />

        <TextView
            android:id="@+id/tv_adjacent_discriminant_time"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_unlock_type"
            android:textColor="@color/bg_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_read_pattern_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/btn_lock_unlock_set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_unlock_perform" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lock_unlock_visit_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll_lock_unlock">

        <TextView
            android:id="@+id/tv_lock_unlock_visit_pwd"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_access_password" 
            android:textColor="@color/bg_black"/>

        <EditText
            android:id="@+id/et_lock_unlock_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/et_access_password_value" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lock_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll_read_pattern"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_lock_unlock_area"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/tag_lock_area" />

        <Spinner
            android:id="@+id/spinner_lock_unlock_type"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/spinner_tag_lock_operation_type" />
    </LinearLayout>

</RelativeLayout>