<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="top"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/shake_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_buzzer_return"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="shake_activity_back"
            android:text="@string/btn_return"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_buzzer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_other_set_buzzer"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:src="@drawable/mm_title_btn_menu" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_buzzer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/shake_title_bar"
        android:background="@drawable/linearlayout_underline"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_buzzer_set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_other_set_buzzer"
            android:textColor="@color/bg_black" />

        <RadioGroup
            android:id="@+id/rb_buzzer_group"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="fill_vertical"
			android:orientation="horizontal"
            android:textColor="@color/bg_black" >

            <RadioButton
                android:id="@+id/rb_buzzer_on"
                android:layout_width="0dp"
            	android:layout_height="fill_parent"
            	android:layout_weight="1"
                android:text="@string/rb_other_set_buzzer_on"
                android:textColor="@color/bg_black" />

            <RadioButton
                android:id="@+id/rb_buzzer_off"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rb_other_set_buzzer_off"
                android:textColor="@color/bg_black" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buzzer_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/btn_buzzer_set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_other_set_buzzer_read" />

        <Button
            android:id="@+id/btn_buzzer_read"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_other_set_buzzer_set" />
    </LinearLayout>

</RelativeLayout>