<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="top" >

    <RelativeLayout
        android:id="@+id/shake_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="shake_activity_back"
            android:text="@string/btn_return"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_params_set_get_version"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:src="@drawable/mm_title_btn_menu" />
    </RelativeLayout>
    <!-- 读卡器设置start -->

    <RelativeLayout
        android:id="@+id/tab_setting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/shake_title_bar"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/ll_get_version"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/tv_get_version_info"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_version_info"
                android:textColor="@color/bg_black" />

            <TextView
                android:id="@+id/tv_version_info"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/bg_red" />
        </LinearLayout>
    </RelativeLayout>
    <!-- 读卡器设置end -->

    <LinearLayout
        android:id="@+id/ll_version_info_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_params_set_version_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.76"
            android:onClick="on_button_read_antenna"
            android:text="@string/btn_params_set_version_read"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>